--- a/templates/default/_includes/reveal/navigation.twig
+++ b/templates/default/_includes/reveal/navigation.twig
@@ -1,23 +1,23 @@
 <nav class="full reveal tertiary-background-color" id="overlayNavigation" data-reveal data-animation-in="fade-in" data-animation-out="fade-out">
-  <div class="grid-x grid-padding-x grid-padding-y align-center-middle" style="height: 100%">
-    <div class="shrink cell text-center">
+  <div class="grid-x align-bottom" style="height: 100%">
+    <div class="shrink cell">
 
-      <ul class="vertical menu text-uppercase sans-bold h4">
+      <ul class="vertical menu">
         {% nav category in craft.categories.group('typeOfProject').all() %}
           <li>
-           <a href="{{ category.url }}" class="" data-toggle="overlayNavigation hamburger">{{ category.title }}</a>
+           <a href="{{ category.url }}" class="" data-toggle="overlayNavigation">{{ category.title }}</a>
           </li>
         {% endnav %}
-        <li><a href="/about" data-toggle="overlayNavigation hamburger">About</a></li>
-        <li><a href="/contact" data-toggle="overlayNavigation hamburger">Contact</a></li>
+        <li><a href="/about" data-toggle="overlayNavigation">About</a></li>
+        <li><a href="/contact" data-toggle="overlayNavigation">Contact</a></li>
       </ul>
   
-      <div class="shrink cell text-center">
-       <ul class="menu align-center">
+      <div class="shrink cell">
+       <ul class="menu">
           {% for block in socials.socials.all() %}
           {% switch block.type %}
             {% case "instagram" %}
-              <li><a href="{{block.socialLink}}" target="_blank"><svg class="icon icon-instagram"><use xlink:href="/assets/icons/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+              <li class="padding-left"><a href="{{block.socialLink}}" target="_blank"><svg class="icon icon-instagram"><use xlink:href="/assets/icons/symbol-defs.svg#icon-instagram"></use></svg></a></li>
             {% case "vimeo" %}
               <li><a href="{{block.socialLink}}" target="_blank"><svg class="icon icon-vimeo"><use xlink:href="/assets/icons/symbol-defs.svg#icon-vimeo"></use></svg></a></li>
           {% endswitch %}
