--- a/templates/default/about/about.twig
+++ b/templates/default/about/about.twig
@@ -24,43 +24,29 @@
 
 
 {% block main %}
-<div class="grid-container">
-      <div class="grid-x grid-padding-x grid-padding-y align-center align-middle">
-        <div class="small-12 cell text-center">
-          {{entry.copy}}
-        </div>
-      </div>
+
 
 
       {% for date, projects in allProjects | group("postDate|date('Y')") %}
           <div class="grid-x grid-padding-x grid-padding-y">
-            <div class="small-12 medium-12 cell padding-bottom-0 text-center">
-              <h5 class="sans-bold margin-bottom-0">{{ date }}</h4>
+            <div class="small-12 medium-12 cell padding-bottom-0">
+              <div class="margin-bottom-0 dark-gray">{{ date }}</div>
             </div>
           </div>
           {% for project in projects %}
-          <div class="grid-x grid-padding-x grid-padding-y border-bottom">
-          <div class="small-12 medium-4 cell">
-            {{ project.title }}
+          <div class="grid-x grid-padding-x">
+          <div class="medium-4 cell">
+            {{ project.title }}<span class="dark-gray padding-left">{{ project.client }}</span>
           </div>
-          <div class="small-12 medium-3 cell">
-            {{ project.agency }}
-          </div>
-          <div class="small-12 medium-5 cell">
-          {% if project.awards|length %}
-            {% for award in project.awards %}
-              <div>{{ award.award }}</div>
-            {% endfor %}
-          {% endif %}
+          <div class="medium-6 cell">
+            {{ project.director }}<span class="padding-left dark-gray">{{ project.productionCompany }}</span>
           </div>
           </div>
           {% endfor %}
       {% endfor %}
 
 
-    </div>
-  </div>
-</div>
+
 {% endblock %}
 
 {% block footer %}
