--- a/web/assets/scss/hamburgers/hamburgers.scss
+++ b/web/assets/scss/hamburgers/hamburgers.scss
@@ -13,7 +13,7 @@ $hamburger-padding-y                       : 0 !default;
 $hamburger-layer-width                     : 1.5rem !default;
 $hamburger-layer-height                    : 2px !default;
 $hamburger-layer-spacing                   : 6px !default;
-$hamburger-layer-color                     : $primary-color !default;
+$hamburger-layer-color                     : $white !default;
 $hamburger-layer-border-radius             : $global-radius !default;
 $hamburger-hover-opacity                   : 0.5 !default;
 $hamburger-hover-transition-duration       : 0.15s !default;
