--- a/templates/default/_includes/blocks/excerpt.twig
+++ b/templates/default/_includes/blocks/excerpt.twig
@@ -1,7 +1,14 @@
 <a href="{{ project.url }}">
   {% set image = project.image.one() %}
   <div class="black-background-color excerpt">
-  <div class="image--24-1" data-interchange="{% if image | length %}{% include "_includes/images/full/24-1/interchange-img-small-12-medium-6" %}{% endif %}" data-aos="fade-in"></div>
+  <div class="image--24-1" data-interchange="{% if image | length %}{% include "_includes/images/full/24-1/interchange-img-small-12-medium-6" %}{% endif %}" data-aos="fade-in">
+{#
+    <div class="content">
+    </div>
+#}
   </div>
-  <div class="text-center margin-top-1 lazy">{{ project.title }}</div>
+  </div>
+{#   <div class="text-center margin-top-1 lazy">{{ project.title }} <span class="dark-gray padding-left">{{ project.client }}</span></div> #}
+  <div class="margin-top-1 lazy">{{ project.title }}</div>
+  <div class="margin-top-0 lazy dark-gray">{{ project.client }}</div>
 </a>
