--- a/templates/default/_includes/global/navigation.twig
+++ b/templates/default/_includes/global/navigation.twig
@@ -1,34 +1,32 @@
 <!-- Mobile Navigation -->
 <div class="grid-x grid-padding-y align-justify align-middle navigation hide-for-large" id="swup-header" style="z-index: 14">
-  <div class="auto cell">
-    <a href="/" class="sans-bold text-uppercase h4">{{ siteName }}</a>
+  <div class="small-10 cell">
+    <a href="/" class="">{% if bodyClass == "project" %}{{ entry.title }} <span class="dark-gray padding-left">{{ entry.client }}</span>{% else %}{{ siteName }} <span class="dark-gray padding-left">Cinematographer</span>{% endif %}</a>
   </div>
-  <div class="shrink cell">
-    <button class="hamburger hamburger--collapse" type="button" aria-label="Navigation" id="hamburger" data-toggle="overlayNavigation hamburger" data-toggler=".hamburger-inner--active">
-      <span class="hamburger-box">
-        <span class="hamburger-inner"></span>
-      </span>
-    </button>
+  <div class="shrink cell align-middle">
+    <a class="" type="button" aria-label="Navigation" data-toggle="overlayNavigation">
+      <svg class="icon icon-lens"><use xlink:href="/assets/icons/symbol-defs.svg#icon-lens"></use></svg>
+    </a>
   </div>
 </div>
 <!-- End Mobile Navigation -->
 
 <!-- Desktop Navigation -->
 <div class="grid-x show-for-large align-justify align-middle navigation" id="swup-header" style="z-index: 14">
-  <div class="small-2 cell align-middle">
-    <button class="hamburger hamburger--collapse" type="button" aria-label="Navigation" id="hamburger" data-toggle="overlayNavigation hamburger" data-toggler=".hamburger-inner--active">
-      <span class="hamburger-box">
-        <span class="hamburger-inner"></span>
-      </span>
-    </button>
+  <div class="shrink cell text-center">
+    <a href="/" class="">{% if bodyClass == "project" %}{{ entry.title }} <span class="dark-gray padding-left">{{ entry.client }}</span>{% else %}{{ siteName }} <span class="dark-gray padding-left">Cinematographer</span>{% endif %}</a>
   </div>
 
-  <div class="auto cell text-center">
-    <a href="/" class="h6">{{ siteName }}</a>
+  <div class="shrink cell align-middle">
+    <a class="" type="button" aria-label="Navigation" data-toggle="overlayNavigation">
+      <svg class="icon icon-lens"><use xlink:href="/assets/icons/symbol-defs.svg#icon-lens"></use></svg>
+    </a>
   </div>
 
+{#
   <div class="small-2 cell text-right">
     <a href="/contact" class="h5 text-uppercase">@</a>
   </div>
+#}
 </div>
 <!-- End Desktop Navigation -->
