--- a/templates/default/_layouts/site.twig
+++ b/templates/default/_layouts/site.twig
@@ -10,7 +10,7 @@
 
 <div class="cell auto swup-transition-fade" id="swup-body">
   <div class="grid-x align-middle" style="min-height: 100%">
-    <div class="cell">
+    <div class="cell padding-bottom-2">
 {% block main %}
 {% endblock %}
     </div>
