--- a/templates/default/projects/project.twig
+++ b/templates/default/projects/project.twig
@@ -42,11 +42,10 @@
 <div class="grid-x grid-padding-x grid-padding-y align-center">
 
 <!-- Previous -->
-<div class="medium-2 large-1 cell show-for-large project__pagination">
+<div class="auto cell show-for-large project__pagination">
   {% if prevEntry %}
   <a href="{{ prevEntry.url }}">
     <div class="grid-y align-center" style="height: 100%;" data-tippy-content="{{ prevEntry.title }}">
-      <div class="shrink cell text-center"><svg class="icon icon-arrows icon-arrow_back"><use xlink:href="/assets/icons/symbol-defs.svg#icon-arrow_back"></use></svg></div>
     </div>
   </a>
   {% endif %}
@@ -54,57 +53,32 @@
 <!-- End Previous -->
 
 <!-- Center -->
-<div class="small-12 medium-10 large-10 cell">
-
-      <div class="margin-bottom-2 sans-bold text-uppercase text-center h5">{{ entry.title }}</div>
-
+<div class="small-12 medium-10 large-10 xlarge-8 cell">
 {% if entry.video %}
-<div class="grid-x grid-padding-x align-center">
+<div class="grid-x grid-padding-x grid-padding-y align-center">
   <div class="small-12 cell">
-{#   	<div class="responsive-embed widescreen"> #}
-
-<div id="player" data-plyr-provider="vimeo" data-plyr-embed-id="{{ entry.video }}"></div>
-
-{#
-<div class="plyr__video-embed" id="player">
-    <iframe
-        src="https://player.vimeo.com/video/{{ entry.video }}?loop=false&amp;byline=false&amp;portrait=false&amp;title=false&amp;speed=true&amp;transparent=0&amp;gesture=media"
-        allowfullscreen
-        allowtransparency
-        allow="autoplay"
-    ></iframe>
-</div>
-#}
-
-{# <div id="player" data-plyr-provider="vimeo" data-plyr-embed-id="{{ entry.video }}"></div> #}
-
-{#   	   <iframe src="https://player.vimeo.com/video/{{ entry.video }}?color=ffffff&title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> #}
-{#   	</div> #}
+    <div id="player" data-plyr-provider="vimeo" data-plyr-embed-id="{{ entry.video }}"></div>
   </div>
 </div>
 {% endif %}
 
 
 <!-- Credits -->
-<div class="grid-x grid-padding-x align-center">
-  <div class="small-12 cell text-center">
-  
-  
+<div class="grid-x grid-padding-x grid-padding-y align-center">
+  <div class="auto cell">
+  {{ entry.director }}<span class="padding-left dark-gray">{{ entry.productionCompany }}</span>
   </div>
+
+  <div class="shrink cell">
+  <a class="" data-open="reveal{{entry.id}}"><svg class="icon icon-arrows icon-add"><use xlink:href="/assets/icons/symbol-defs.svg#icon-add"></use></svg></a>
+  </div>
+
 </div>
 <!-- End Credit -->
 
-<!-- Content -->
-<div class="grid-x grid-padding-x grid-padding-y grid-margin-y align-center">
-  <div class="small-12 cell text-center">
-  {{ entry.copy }}
-  </div>
-</div>
-<!-- End Content -->
-
 <!-- Mobile Pagination -->
 {% if nextEntry %}
-<div class="grid-x grid-padding-x align-center hide-for-large">
+<div class="grid-x grid-padding-x grid-padding-y align-center hide-for-large">
   <div class="shrink cell text-center">
     <a href="{{ nextEntry.url }}"><svg class="icon icon-arrows icon-arrow_forward"><use xlink:href="/assets/icons/symbol-defs.svg#icon-arrow_forward"></use></svg></a>
   </div>
@@ -112,18 +86,15 @@
 {% endif %}
 <!-- End Mobile Pagination -->
       
-      
-      
-
 </div>
 <!-- End Center -->
 
 <!-- Next -->
-<div class="medium-2 large-1 cell show-for-large project__pagination">
+<div class="auto cell show-for-large project__pagination">
   {% if nextEntry %}
   <a href="{{ nextEntry.url }}">
     <div class="grid-y align-center" style="height: 100%;" data-tippy-content="{{ nextEntry.title }}">
-      <div class="shrink cell text-center"><svg class="icon icon-arrows icon-arrow_forward"><use xlink:href="/assets/icons/symbol-defs.svg#icon-arrow_forward"></use></svg></div>
+{#       <div class="shrink cell text-center"><svg class="icon icon-arrows icon-arrow_forward"><use xlink:href="/assets/icons/symbol-defs.svg#icon-arrow_forward"></use></svg></div> #}
     </div>
   </a>
   {% endif %}
@@ -133,7 +104,27 @@
 </div>   
 <!-- End Content -->
 
+<!-- Credits -->
+<div class="full reveal" id="reveal{{entry.id}}" data-reveal>
 
+  <div class="grid-x align-center-middle" style="min-height: 100%">
+    <div class="shrink cell padding-vertical-3">
+
+      <div class="grid-x grid-padding-x grid-padding-y grid-margin-y align-center">
+        <div class="small-12 cell text-center">
+        {{ entry.copy }}
+
+
+        <a class="dark-gray" data-close aria-label="Close modal" type="button">Close</a>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</div>
+<!-- End Credits -->
 
 {% endblock %}
 
