--- a/web/assets/scss/_typography.scss
+++ b/web/assets/scss/_typography.scss
@@ -10,11 +10,11 @@ $letter-spacing--tight: -0.018em;
 $letter-spacing--looser: 0.25em;
 $letter-spacing--loose: 0.125em;
 
-$logo: 'Marr Sans', serif;
-$sans-display: 'Marr Sans', sans-serif;
-$sans-regular: 'Marr Sans', sans-serif;
-$sans-bold: 'GT America Condensed Bold', sans-serif;
-$sans-light: 'Marr Sans', sans-serif;
+$logo: 'Monument Grotesk Regular', serif;
+$sans-display: 'Monument Grotesk Regular', sans-serif;
+$sans-regular: 'Univers Next Pro Regular', sans-serif;
+$sans-bold: 'Monument Grotesk Medium', sans-serif;
+$sans-light: 'Monument Grotesk Regular', sans-serif;
 $serif-display: 'Louize Display', sans-serif;
 $serif-bold: 'GT Alpina Light', sans-serif;
 $serif-regular: 'GT Alpina Light', serif;
