--- a/templates/default/_includes/global/navigation.twig
+++ b/templates/default/_includes/global/navigation.twig
@@ -1,5 +1,5 @@
 <!-- Desktop Navigation -->
-<div class="grid-x align-justify align-middle navigation" id="swup-header" style="z-index: 14">
+<div class="grid-x align-justify align-middle navigation" id="swup-header">
 
   <div class="auto cell">
     <button class="white" aria-label="Navigation" data-toggle="overlayNavigation">{% if bodyClass == "project" %}{{ entry.title }} <span class="dark-gray padding-left">{{ entry.client }}</span>{% else %}{{ siteName }} <span class="dark-gray padding-left">Cinematographer</span>{% endif %}</button>
