--- a/templates/default/_includes/reveal/navigation.twig
+++ b/templates/default/_includes/reveal/navigation.twig
@@ -1,5 +1,5 @@
 <nav class="full reveal tertiary-background-color" id="overlayNavigation" data-reveal data-animation-in="fade-in" data-animation-out="fade-out">
-  <div class="grid-x align-bottom" style="height: 100%">
+  <div class="grid-y align-justify" style="height: 100%">
     <div class="shrink cell">
 
       <ul class="vertical menu">
@@ -8,23 +8,29 @@
            <a href="{{ category.url }}" class="" data-toggle="overlayNavigation">{{ category.title }}</a>
           </li>
         {% endnav %}
-        <li><a href="/about" data-toggle="overlayNavigation">About</a></li>
-        <li><a href="/contact" data-toggle="overlayNavigation">Contact</a></li>
       </ul>
-  
-      <div class="shrink cell">
-       <ul class="menu">
-          {% for block in socials.socials.all() %}
-          {% switch block.type %}
-            {% case "instagram" %}
-              <li class="padding-left"><a href="{{block.socialLink}}" target="_blank"><svg class="icon icon-instagram"><use xlink:href="/assets/icons/symbol-defs.svg#icon-instagram"></use></svg></a></li>
-            {% case "vimeo" %}
-              <li><a href="{{block.socialLink}}" target="_blank"><svg class="icon icon-vimeo"><use xlink:href="/assets/icons/symbol-defs.svg#icon-vimeo"></use></svg></a></li>
-          {% endswitch %}
-          {% endfor %}
-        </ul>
-      </div>
+      <ul class="vertical menu margin-top-1">
+          <li><a href="/about" data-toggle="overlayNavigation">About</a></li>
+          <li><a href="/contact" data-toggle="overlayNavigation">Contact</a></li>
+          <li><a href="/press" data-toggle="overlayNavigation">Press</a></li>
+          <li><a href="/awards" data-toggle="overlayNavigation">Awards</a></li>
+      </ul>
+
 
     </div>
+
+    <div class="shrink cell">
+     <ul class="menu">
+        {% for block in socials.socials.all() %}
+        {% switch block.type %}
+          {% case "instagram" %}
+            <li class="padding-left"><a href="{{block.socialLink}}" target="_blank"><svg class="icon icon-instagram"><use xlink:href="/assets/icons/symbol-defs.svg#icon-instagram"></use></svg></a></li>
+          {% case "vimeo" %}
+            <li><a href="{{block.socialLink}}" target="_blank"><svg class="icon icon-vimeo"><use xlink:href="/assets/icons/symbol-defs.svg#icon-vimeo"></use></svg></a></li>
+        {% endswitch %}
+        {% endfor %}
+      </ul>
+    </div>
+
   </div>
 </nav>
