--- a/templates/default/about/about.twig
+++ b/templates/default/about/about.twig
@@ -25,25 +25,29 @@
 
 {% block main %}
 
+<div class="grid-x grid-padding-x grid-padding-y">
+  <div class="small-12 medium-8 large-6 cell">
+    {{entry.copy}}
+  </div>
+</div>
 
-
-      {% for date, projects in allProjects | group("postDate|date('Y')") %}
-          <div class="grid-x grid-padding-x grid-padding-y">
-            <div class="small-12 medium-12 cell padding-bottom-0">
-              <div class="margin-bottom-0 dark-gray">{{ date }}</div>
-            </div>
-          </div>
-          {% for project in projects %}
-          <div class="grid-x grid-padding-x">
-          <div class="medium-4 cell">
-            {{ project.title }}<span class="dark-gray padding-left">{{ project.client }}</span>
-          </div>
-          <div class="medium-6 cell">
-            {{ project.director }}<span class="padding-left dark-gray">{{ project.productionCompany }}</span>
-          </div>
-          </div>
-          {% endfor %}
-      {% endfor %}
+{% for date, projects in allProjects | group("postDate|date('Y')") %}
+    <div class="grid-x grid-padding-x grid-padding-y">
+      <div class="small-12 medium-12 cell padding-bottom-0">
+        <div class="margin-bottom-0 dark-gray">{{ date }}</div>
+      </div>
+    </div>
+    {% for project in projects %}
+    <div class="grid-x grid-padding-x">
+    <div class="medium-4 cell">
+      {{ project.title }}<span class="dark-gray padding-left">{{ project.client }}</span>
+    </div>
+    <div class="medium-6 cell">
+      {{ project.director }}<span class="padding-left dark-gray">{{ project.productionCompany }}</span>
+    </div>
+    </div>
+    {% endfor %}
+{% endfor %}
 
 
 
