--- a/templates/default/contact/contact.twig
+++ b/templates/default/contact/contact.twig
@@ -49,6 +49,13 @@
       </div>
     </div>
     {% endfor %}
+
+    <div class="grid-x grid-padding-x grid-padding-y">
+      <div class="small-12 medium-6 large-5 cell small dark-gray">
+      {{site.copyright}}
+      </div>
+    </div>
+
     
     <!-- Terms and Privacy -->
     <div class="grid-x grid-padding-x grid-padding-y align-justify">
