--- a/templates/default/projects/project.twig
+++ b/templates/default/projects/project.twig
@@ -67,9 +67,35 @@
 <div class="grid-x grid-padding-x grid-padding-y align-center">
   <div class="shrink cell">
   <a class="" data-open="reveal{{entry.id}}"><svg class="icon icon-arrows icon-add"><use xlink:href="/assets/icons/symbol-defs.svg#icon-add"></use></svg></a>
+  <a class="" data-open="reveal{{entry.id}}"><svg class="icon icon-arrows icon-tonality"><use xlink:href="/assets/icons/symbol-defs.svg#icon-tonality"></use></svg></a>
   </div>
 </div>
 <!-- End Credit -->
+
+
+<!-- Images -->
+<div class="grid-container">
+  <div class="grid-x grid-padding-x grid-padding-y align-center">
+
+    {% for image in entry.images %}
+     {% if image.aspectRatio == "landscape" %}
+     <div class="small-12 medium-12 cell">
+      <div class="margin-bottom-2 image--16-9" data-interchange="{% include "_includes/images/contained/16-9/interchange-img-small-12-medium-12" %}"></div>
+     </div>
+     {% elseif image.aspectRatio == "portrait" %}
+     <div class="small-12 medium-6 cell">
+      <div class="margin-bottom-2 image--5-7" data-interchange="{% include "_includes/images/contained/5-7/interchange-img-small-12-medium-12" %}"></div>
+     </div>
+     {% else  %}
+     <div class="small-12 medium-12 cell">
+      <div class="margin-bottom-2 image--16-9" data-interchange="{% include "_includes/images/contained/16-9/interchange-img-small-12-medium-12" %}"></div>
+     </div>
+     {% endif %}
+
+    {% endfor %}
+  </div>
+</div>
+<!-- End Images -->
 
 <!-- Awards -->
 <div class="grid-x grid-padding-x grid-padding-y align-center">
@@ -112,7 +138,7 @@
 <!-- End Content -->
 
 <!-- Credits -->
-<div class="full reveal" id="reveal{{entry.id}}" data-reveal>
+<div class="full reveal" id="reveal{{entry.id}}" data-reveal data-animation-in="fade-in" data-animation-out="fade-out">
 
   <div class="grid-x align-center-middle" style="min-height: 100%">
     <div class="shrink cell padding-vertical-3">
@@ -122,7 +148,7 @@
         {{ entry.copy }}
 
 
-        <a class="dark-gray" data-close aria-label="Close modal" type="button">Close</a>
+        <a class="dark-gray text-uppercase" data-close aria-label="Close modal" type="button">Close</a>
 
         </div>
       </div>
