--- a/web/assets/scss/app.scss
+++ b/web/assets/scss/app.scss
@@ -104,11 +104,7 @@
 @include motion-ui-transitions;
 @include motion-ui-animations;
 
-
-// 6. Hamburgers
-// -------
-
-@import 'hamburgers/hamburgers';
+@import 'fancybox';
 
 
 // 7. Layout
