--- a/templates/default/projects/project.twig
+++ b/templates/default/projects/project.twig
@@ -67,13 +67,12 @@
 <div class="grid-x grid-padding-x grid-padding-y align-center">
   <div class="shrink cell">
   <a class="" data-open="reveal{{entry.id}}"><svg class="icon icon-arrows icon-add"><use xlink:href="/assets/icons/symbol-defs.svg#icon-add"></use></svg></a>
-  <a data-fancybox-trigger="gallery" href="javascript:;"><svg class="icon icon-arrows icon-tonality"><use xlink:href="/assets/icons/symbol-defs.svg#icon-tonality"></use></svg></a>
-
+  {% if entry.images|length %}<a data-fancybox-trigger="gallery" href="javascript:;"><svg class="icon icon-arrows icon-tonality"><use xlink:href="/assets/icons/symbol-defs.svg#icon-tonality"></use></svg></a>{% endif %}
   </div>
 </div>
 <!-- End Credit -->
 
-
+{% if entry.images|length %}
 {% for image in entry.images %}
 <div class="hide">
 <div data-fancybox="gallery">
@@ -81,6 +80,7 @@
 </div>
 </div>
 {% endfor %}
+{% endif %}
 
 
 
