--- a/web/assets/scss/_fancybox.scss
+++ b/web/assets/scss/_fancybox.scss
@@ -336,7 +336,7 @@ color: $white;
 
 .fancybox-button:hover {
 //     color: #fff;
-    color: $black;
+    color: $dark-gray;
 }
 
 .fancybox-button:focus {
