Change Menu to Text

--- a/templates/default/_includes/global/navigation.twig
+++ b/templates/default/_includes/global/navigation.twig
@@ -6,7 +6,8 @@
   </div>
 
   <div class="shrink cell">
-    <button class="white" aria-label="Navigation" data-toggle="overlayNavigation"><svg class="icon icon-lens"><use xlink:href="/assets/icons/symbol-defs.svg#icon-lens"></use></svg></button>
+{#     <button class="white" aria-label="Navigation" data-toggle="overlayNavigation"><svg class="icon icon-lens"><use xlink:href="/assets/icons/symbol-defs.svg#icon-lens"></use></svg></button> #}
+    <button class="white" aria-label="Navigation" data-toggle="overlayNavigation">Menu</button>
   </div>
 
 </div>
