--- a/templates/default/_includes/blocks/excerpt.twig
+++ b/templates/default/_includes/blocks/excerpt.twig
@@ -9,6 +9,6 @@
   </div>
   </div>
 {#   <div class="text-center margin-top-1 lazy">{{ project.title }} <span class="dark-gray padding-left">{{ project.client }}</span></div> #}
-  <div class="margin-top-1 lazy">{{ project.title }}</div>
-  <div class="margin-top-0 lazy dark-gray">{{ project.client }}</div>
+  <div class="margin-top-1 text-uppercase">{{ project.title }}</div>
+  <div class="margin-top-0 text-uppercase dark-gray">{{ project.client }}</div>
 </a>
