--- a/web/assets/scss/_typography.scss
+++ b/web/assets/scss/_typography.scss
@@ -11,8 +11,8 @@ $letter-spacing--looser: 0.25em;
 $letter-spacing--loose: 0.125em;
 
 $logo: 'Monument Grotesk Regular', serif;
-$sans-display: 'Monument Grotesk Regular', sans-serif;
-$sans-regular: 'Univers Next Pro Regular', sans-serif;
+$sans-display: 'Sans Small Caps', sans-serif;
+$sans-regular: 'Sans Small Caps', sans-serif;
 $sans-bold: 'Monument Grotesk Medium', sans-serif;
 $sans-light: 'Monument Grotesk Regular', sans-serif;
 $serif-display: 'Louize Display', sans-serif;
