--- a/templates/default/_includes/reveal/navigation.twig
+++ b/templates/default/_includes/reveal/navigation.twig
@@ -1,22 +1,14 @@
 <nav class="full reveal tertiary-background-color" id="overlayNavigation" data-reveal data-animation-in="fade-in" data-animation-out="fade-out">
   <div class="grid-y align-justify" style="height: 100%">
-    <div class="shrink cell">
-
+    <div class="shrink cell text-uppercase">
       <ul class="vertical menu">
         {% nav category in craft.categories.group('typeOfProject').all() %}
           <li>
            <a href="{{ category.url }}" class="" data-toggle="overlayNavigation">{{ category.title }}</a>
           </li>
         {% endnav %}
+        <li><a href="/contact" data-toggle="overlayNavigation">Contact</a></li>
       </ul>
-      <ul class="vertical menu margin-top-1">
-          <li><a href="/about" data-toggle="overlayNavigation">About</a></li>
-          <li><a href="/contact" data-toggle="overlayNavigation">Contact</a></li>
-          <li><a href="/press" data-toggle="overlayNavigation">Press</a></li>
-          <li><a href="/awards" data-toggle="overlayNavigation">Awards</a></li>
-      </ul>
-
-
     </div>
 
     <div class="shrink cell">
