--- a/templates/default/index.twig
+++ b/templates/default/index.twig
@@ -20,18 +20,23 @@
 
 {% block main %}
 
-<!-- Projects -->
-{% set projectCount = projects|length %}
-<div class="grid-container">
-<div class="grid-x {% if projectCount > 2 %}align-left{% else %}align-center{% endif %}">
-  {% for project in projects %}
-    <div class="small-12 medium-6 {% if projectCount > 2 %}xlarge-6{% else %}xlarge-6{% endif %} cell padding">
-    {% include "_includes/blocks/excerpt" %}
-    </div>
-  {% endfor %}
+
+<div class="grid-x">
+<div class="small-12 cell">
+<div class="hero">
+
+<div class="image--hero" data-aos="new-animation"></div>
+{% if entry.previewVideo %}
+  <video playsinline autoplay muted loop class="video" poster="" data-aos="new-animation">
+    <source src="{{ entry.previewVideo }}" type="video/mp4">
+  </video>
+{% endif %}
+</div>
+
 </div>
 </div>
-<!-- End Projects -->
+</div>
+
 {% endblock %}
 
 
