--- a/web/assets/scss/_fonts.scss
+++ b/web/assets/scss/_fonts.scss
@@ -1,29 +1,19 @@
 @font-face {
-  font-family: 'Monument Grotesk Regular';
+  font-family: 'Sans Regular';
   src: 
-  url('../fonts/monument-grotesk-regular.woff2') format('woff2'), 
-  url('../fonts/monument-grotesk-regular.woff') format('woff'),
-  url('../fonts/monument-grotesk-regular.ttf') format('ttf');
+  url('../fonts/sans-regular.woff2') format('woff2'), 
+  url('../fonts/sans-regular.woff') format('woff'),
+  url('../fonts/sans-regular.ttf') format('ttf');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Monument Grotesk Medium';
+  font-family: 'Sans Small Caps';
   src: 
-  url('../fonts/monument-grotesk-medium.woff2') format('woff2'), 
-  url('../fonts/monument-grotesk-medium.woff') format('woff'),
-  url('../fonts/monument-grotesk-medium.ttf') format('ttf');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Univers Next Pro Regular';
-  src: 
-  url('../fonts/univers-next-pro-regular.woff2') format('woff2'), 
-  url('../fonts/univers-next-pro-regular.woff') format('woff'),
-  url('../fonts/univers-next-pro-regular.ttf') format('ttf');
+  url('../fonts/sans-sc.woff2') format('woff2'), 
+  url('../fonts/sans-sc.woff') format('woff'),
+  url('../fonts/sans-sc.ttf') format('ttf');
   font-weight: normal;
   font-style: normal;
 }
