--- a/web/assets/scss/_settings.scss
+++ b/web/assets/scss/_settings.scss
@@ -66,6 +66,7 @@
 // ---------
 
 $global-font-size: 100%;
+$global-font-size: 17px;
 // $global-width: rem-calc(1200);
 $global-width: rem-calc(1600);
 // $global-lineheight: 1.5;
