--- a/templates/default/category/category.twig
+++ b/templates/default/category/category.twig
@@ -21,7 +21,7 @@
 <!-- Projects -->
 {% set projectCount = projects|length %}
 <div class="grid-container">
-<div class="grid-x {% if projectCount > 2 %}align-left{% else %}align-center{% endif %}">
+<div class="grid-x grid-padding-x grid-padding-y {% if projectCount > 2 %}align-left{% else %}align-center{% endif %}">
   {% for project in projects %}
     <div class="small-12 medium-6 {% if projectCount > 2 %}xlarge-6{% else %}xlarge-6{% endif %} xxlarge-4 cell padding">
     {% include "_includes/blocks/excerpt" %}
